--- a/package.json
+++ b/package.json
@@ -13,17 +13,6 @@
     "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
     "eject": "react-scripts eject"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "yarn test-related --",
-      "eslint"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,12 +30,18 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.11",
     "node-sass": "^4.13.0",
+    "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -55,7 +50,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "husky": "^3.1.0",
+    "husky": "3.1.0",
     "lint-staged": "^9.4.3",
     "redux-devtools-extension": "^2.13.8"
   }
